@@ -40,6 +40,7 @@ import org.opensearch.gradle.jvm.JvmTestSuiteHelper;
 import org.opensearch.gradle.test.ErrorReportingTestListener;
 import org.opensearch.gradle.util.Util;
 import org.gradle.api.Action;
+import org.gradle.api.JavaVersion;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
@@ -106,7 +107,14 @@ public class OpenSearchTestBasePlugin implements Plugin<Project> {
                     mkdirs(test.getWorkingDir().toPath().resolve("temp").toFile());
 
                     // TODO remove once jvm.options are added to test system properties
-                    test.systemProperty("java.locale.providers", "SPI,CLDR");
+                    if (BuildParams.getRuntimeJavaVersion() == JavaVersion.VERSION_1_8) {
+                        test.systemProperty("java.locale.providers", "SPI,JRE");
+                    } else {
+                        test.systemProperty("java.locale.providers", "SPI,CLDR");
+                        if (test.getJavaVersion().compareTo(JavaVersion.VERSION_17) < 0) {
+                            test.jvmArgs("--illegal-access=warn");
+                        }
+                    }
                 }
             });
             test.getJvmArgumentProviders().add(nonInputProperties);
